# Beacon

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .semgrepignore  AGENTS.md  CONTRIBUTING.md  PROJECT_VERSION  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.json  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-pages.yml
Admin/: README.md  VideoAnalyzer.py  manage.spec  requirements-build.txt  requirements-cloud.txt  requirements-linux.txt  requirements-optional.txt  requirements-windows.txt  runtime_paths.py  settings_store.py  test_runtime_paths.py  test_video_analyzer_launcher_paths.py
Admin/app/: apps.py  context_processors.py  middleware.py  models.py  urls.py  ws.py
Admin/app/migrations/: 0001_initial.py  (+61 more)
Admin/framework/: asgi.py  settings.py  urls.py  versioning.py
Admin/frontend/: index.html  package-lock.json  package.json  vite.config.mjs
Analyzer/: CMakeLists.txt  README.md
Analyzer/Analyzer/: Analyzer.vcxproj  main.cpp
Analyzer/Analyzer/Core/: AlarmEncodeProfile.cpp  AlarmEncodeProfile.h  AlarmImageMode.h  AlarmNotifyBackoff.cpp  AlarmNotifyBackoff.h  AlarmQueuePolicy.cpp  AlarmQueuePolicy.h  Algorithm.cpp  Algorithm.h  AlgorithmBuiltinCatalog.cpp  AlgorithmBuiltinCatalog.h  AlgorithmDeviceSuffix.cpp  AlgorithmDeviceSuffix.h  AlgorithmInstanceKey.cpp  AlgorithmInstanceKey.h  AlgorithmLoadValidation.cpp  AlgorithmLoadValidation.h  AlgorithmOnReid.cpp  AlgorithmOnReid.h  AlgorithmOnYolo.cpp  AlgorithmOnYolo.h  AlgorithmOvReid.cpp  AlgorithmOvReid.h  AlgorithmOvYolo.cpp  AlgorithmOvYolo.h  AlgorithmPipeline.cpp  AlgorithmPipeline.h  AlgorithmPlugin.cpp  AlgorithmPlugin.h  AlgorithmTestInferValidation.cpp  AlgorithmTestInferValidation.h  AlgorithmXcOcr.cpp  AlgorithmXcOcr.h  Analyzer.cpp  Analyzer.h  ApiAlgorithmSupport.cpp  ApiAlgorithmSupport.h  ApiInferGuard.cpp  ApiInferGuard.h  AvPullStream.cpp  (+108 more)
Analyzer/Analyzer/Core/Utils/: Base64.h  CalcuIOU.cpp  CalcuIOU.h  Common.h  JsonBool.h  Log.h  Pts.cpp  Pts.h  Request.cpp  Request.h
Analyzer/Analyzer/Core/tests/: dummy_plugin_v3.cpp  test_alarm_queue_policy.cpp  test_algorithm_load_validation.cpp  test_algorithm_plugin_destroy.cpp  test_api_infer_guard.cpp  test_behavior_api_config_parse.cpp  test_behavior_api_crosscount_runtime.cpp  test_behavior_api_crowd_threshold_runtime.cpp  test_behavior_event_postprocess.cpp  test_compat_plugin_runtime.cpp  test_decoded_frame_queue.cpp  test_detect_object_geometry.cpp  test_detect_object_json.cpp  test_face_db_vptree.cpp  test_frame_pool.cpp  test_image_preprocess.cpp  test_license_lease_renew_policy.cpp  test_local_license.cpp  test_model_encryption_resolve.cpp  test_pipeline_mode3_mode4.cpp  test_pipeline_mode6_mode7.cpp  test_pipeline_mode8_mode9.cpp  test_recognition_regions_parse.cpp  test_reid_tracker_assoc.cpp  test_shared_decode_manager.cpp  test_xcocr_postprocess.cpp  test_yolo_detection_postprocess_obb.cpp  test_yolo_output_layout.cpp  test_yolo_pose_postprocess.cpp  test_yolo_segmentation_postprocess.cpp
Analyzer/Compat/: CMakeLists.txt  compat_plugin.cpp
MediaServer/: README.md  UPSTREAM.md
MediaServer/source/: CMakeLists.txt  dockerfile  k8s_readme.md
deploy/cloud-saas-v1/: .env.example  Dockerfile  compose.monitoring.yml  compose.yml  config.cloud.json
docs/: ALGORITHM_CONFIG_GUIDE.md  CHANGELOG.md  QUICK_REFERENCE.md  TAGS.md  faq.md  index.md  requirements.txt
docs/algorithms/: builtin.md  index.md  models.md  pipeline.md  plugin-sdk.md  troubleshooting.md
docs/api/: alarms.md  authentication.md  changelog.md  controls.md  errors.md  index.md  streams.md  system.md
docs/architecture/: admin.md  analyzer.md  index.md  mediaserver.md
docs/configuration/: config-json.md  env-vars.md  index.md
docs/deploy/: README.md  config-reference.md  database-and-backup.md  delivery-layout.md  e2e-acceptance.md  edge-full-stack.md  go-live-checklist.md  licensing.md  observability.md  ops-runbook.md  performance-tuning.md  ports-and-firewall.md  reverse-proxy-nginx.md  secrets-and-rotation.md  security-hardening.md  service-management.md  troubleshooting.md
docs/deployment/: build-and-package-linux.md  build-and-package-windows.md  build-and-package.md  cluster.md  digital-human-runtime.md  docker.md  index.md  kubernetes.md  linux-runtime-libs.md  linux.md  local-linux.md  local-windows.md  windows-runtime-libs.md  windows.md
docs/developer/: contributing.md  index.md  structure.md
docs/getting-started/: first-stream.md  index.md  installation.md  quickstart.md  requirements.md
docs/guide/: alarms.md  algorithms.md  controls.md  digital-human.md  face.md  index.md  screen.md  streams.md  system.md  ui-pages.md
docs/integration/: alarm-bus.md  alarm-event-bus.md  algorithm-api-protocol-v2.md  algorithm-plugin-sdk-v2.md  cloud-remote-control-plane.md  cloud-saas-v1.md  gb28181-provider-tcp-mode.md  index.md  ldap.md  oidc.md  psim.md  webhook.md
docs/operations/: failover.md  index.md  monitoring.md  performance.md  security.md  troubleshooting.md
docs/sdk/: go.md  index.md  javascript.md  python.md
examples/alarm_webhook_receiver/: README.md  receiver.py
examples/algorithm_api_server_fastapi/: README.md  main.py  requirements.txt
examples/algorithm_plugin_cpp/: CMakeLists.txt  README.md  beacon_plugin_sdk_v2.h  plugin_demo.cpp
sdk/go/: README.md  client.go  client_test.go  go.mod
sdk/javascript/: README.md  beacon-sdk.mjs  package-lock.json  package.json
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/beacon_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
tests/: __init__.py  test_beacon_localdeps_env.py  test_rtsp_simulator_extract.py  test_rtsp_simulator_golden.py
tests/golden/: rtsp_simulator_probe.json
tools/: admin_api_load_test.py  beacon_localdeps_env.sh  build_analyzer_local.sh  cloud_remote_control_check.py  docs_strict_check.py  ldap_check.py  model_encrypt.py  rtsp_simulator.py  run_analyzer_local.sh  run_analyzer_unit_tests.sh
tools/tracing/: README.md  stub_services.py  trace_smoke_test.py
(+474 files in other folders)
