[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-ai-video-sdk"
version = "0.1.0"
description = "Minimal Python SDK for Beacon developer integration endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.34.2,<3"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Beacon Team"}]

[project.urls]
Repository = "https://github.com/skygazer42/Beacon"

[tool.setuptools]
packages = ["beacon_sdk"]
